# credence-ai

./: .gitguardian.yaml  .gitignore  .mcp.json  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  DEMO_SCRIPT.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SUBMISSION.md  TECHNICAL_REPORT.md  VISION.md  docker-compose.yml  pyproject.toml  quickstart.py  requirements.txt  requirements_kaggle.txt  server.json  test_final.py  test_stress.py  tests.py
.claude/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
_archive/: ARCHIVE_LOG.md  removed_dead_code.md
_archive/api_dependent/: agent.py  bandit.py  behavioral_signal.py  claim_extractor.py  confidence_proxy.py  dpo_proxy.py  semantic_entropy.py  test_adaptive.py  test_claims.py
_archive/demo_extra/: cover.html  intro.html  live_demo.py  presentation.html
_archive/demo_scripts/: CLAUDE_VOICEOVER_SCRIPT.md  (+9 more)
api/: main.py
cams/: __init__.py  agent.py  behavioral_signal.py  confidence_proxy.py  context_manager.py  envelope.py  mcp_server.py
claude_code_demo/: CLAUDE.md  payment_integration.py
credence/: __init__.py  __main__.py  agent.py  behavioral_signal.py  client.py  context_manager.py  envelope.py  epistemic_manifest.py  hooks.py  install_gate.py  mcp_server.py  memory.py  observer.py  pipeline_monitor.py  providers.py  registry.py  temporal_patterns.py  wrap.py
credence_gate/: Cargo.toml
credence_gate/src/: main.rs
credence_runtime/: __init__.py  __main__.py
data/: elite_500.json  synthesize_3k.py  synthesize_5k.py  verify_dataset.py
demo/: CLAUDE_VOICEOVER_SCRIPT.md  ELEVENLABS_INPUT.txt  __init__.py  app.py  cds_study.py  cds_study_results.json  compress_demo.py  demo_script.md  failure_demo.py  failure_demo_results.json  gate_demo.cast  gate_demo.py  live_demo.py  multi_agent_demo.py  presentation.html  self_probe_demo.py  session_demo.py  session_demo_results.json
docs/: ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  ETP_SPEC.md  INTERNALS.md  LAUNCH.md  MCP_REGISTRY_SUBMISSION.md  README.md  ROADMAP.md  SUBMISSION.md  SUBMISSION_SUMMARY.md  TECHNICAL_REPORT.md  VISION.md  claude_desktop_config.json  etp_v1.json
evals/: README.md  __init__.py  adversarial_results.json  adversarial_tests.py  behavioral_calibration.py  behavioral_calibration_results.json  benchmark.py  calibration.json  calibration.py  calibration_curve_results.json  cds_results.json  ce_false_enforcement_rate.py  ce_fer_results.json  ce_results.json  claim_benchmark.py  claim_gauntlet.py  claude_code_client.py  comparison_table.json  compression_faithfulness.py  compression_faithfulness_n50_results.json  compression_faithfulness_results.json  compression_faithfulness_results_groq.json  compression_faithfulness_results_hf.json  consistency_enforcer_test.py  conv_results.json  conv_results_full.json  conversation_benchmark.py  cross_session_eval.py  cross_session_results.json  cross_session_test.py  dpo_epoch_results.json  e1_repeated.py  e6_results.json  e7_results.json  e8_results.json  end_to_end_compression.py  end_to_end_compression_results_groq.json  end_to_end_compression_results_hf.json  eql_bench.py  eql_bench_qwen_analysis.json  (+30 more)
examples/: compliance_logging.py  dashboard.py  langchain_router.py  quickstart.py
experimental/: README.md  enforce.py
kaggle_fcr/: credence_fcr_downstream.ipynb  kernel-metadata.json
kaggle_multimodel/: credence_multimodel_eqlr.ipynb  kernel-metadata.json
kaggle_v6/: PUSH.md  credence_eqlr_open_model.ipynb  eql_bench_v2.json  kernel-metadata.json
paper/: PAPER_DRAFT.md  README.md
tests/: stress_full.py  test_claims.py  tests.py
training/: dpo_train.py  epistemic_loss.py  merge_model.py
(+89 files in other folders)
