[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cams-claude"
version = "1.1.0"
description = "Confidence-Adaptive Memory System — epistemic integrity layer for Claude"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Lakshmi-Chakradhar-Vijayarao" }
]
keywords = [
    "llm", "claude", "memory", "context", "epistemic",
    "confidence", "uncertainty", "mcp", "agent"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
mcp = [
    "fastmcp>=0.1.0",
]
demo = [
    "streamlit>=1.30.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
cams-mcp-server = "cams.mcp_server:main"

[project.urls]
Repository = "https://github.com/Lakshmi-Chakradhar-Vijayarao/cams-claude"

[tool.setuptools.packages.find]
include = ["cams*", "evals*", "demo*"]
