[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credence-guard"
version = "1.0.0"
description = "Credence — epistemic enforcement layer that prevents LLMs from forgetting what they didn't know"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Lakshmi-Chakradhar-Vijayarao" }
]
keywords = [
    "llm", "claude", "epistemic", "uncertainty", "mcp",
    "agent", "context-compression", "hallucination", "safety",
    "claude-code", "eql", "false-certainty"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
mcp = [
    "fastmcp>=1.0.0",
]
demo = [
    "streamlit>=1.30.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
credence-server       = "credence.mcp_server:main"
credence-install-gate = "credence.install_gate:main"

[project.urls]
Homepage = "https://github.com/Lakshmi-Chakradhar-Vijayarao/credence-ai"
Repository = "https://github.com/Lakshmi-Chakradhar-Vijayarao/credence-ai"
Documentation = "https://github.com/Lakshmi-Chakradhar-Vijayarao/credence-ai/blob/main/docs/TECHNICAL_REPORT.md"
"Bug Tracker" = "https://github.com/Lakshmi-Chakradhar-Vijayarao/credence-ai/issues"
"PyPI" = "https://pypi.org/project/credence-guard/"

[tool.setuptools.packages.find]
include = ["credence*", "evals*", "demo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
