[package]
name = "credence-gate"
version = "1.0.0"
edition = "2021"
description = "Credence enforcement gate — native Claude Code PreToolUse hook"
authors = ["Credence <credence-ai>"]

[[bin]]
name = "credence-gate"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
